src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__author_details_ui__author_details_ui_tests__tests__snapshot_tests__author_details_ui_renders_author_overview_over_author_details.snap
---
source: src/ui/readarr_ui/library/author_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Test Author  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Author: Test Author                                                                                                                                │        
        │Status: Continuing                                                                                                                                 │        
        │Genres: sci╭───────────────────────────────────────────────────────  Overview  ───────────────────────────────────────────────────────╮            │        
        │Rating: N/A│some interesting description of the author                                                                                │            │        
        │Path: /nfs/│                                                                                                                          │            │        
        │Quality Pro│He was born in Madison, Wisconsin: a city he has never really left.                                                       │            │        
        │Metadata Pr│                                                                                                                          │            │        
        │Monitored: │His first novel took him seven years to finish.                                                                           │            │        
        │Overview: s│                                                                                                                          │took him    │        
        │seven years│                                                                                                                          │            │        
        │           │                                                                                                                          │            │        
        │           │                                                                                                                          │            │        
        │╭  Author D│                                                                                                                          │───────────╮│        
        ││ Books │ H│                                                                                                                          │           ││        
        ││──────────│                                                                                                                          │───────────││        
        ││   Monitor│                                                                                                                          │           ││        
        ││=> 🏷      │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          │                                                                                                                          │           ││        
        ││          ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯           ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
